--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: ben-lininkinbio # the name of this service, eg your app name
+    name: ben-linkinbio # the name of this service, eg your app name
     env: ruby # this app is written in ruby
     plan: free # make sure to set this to free or you'll get billed $$$
     buildCommand: "./bin/render-build.sh"
